--- a/index.html
+++ b/index.html
@@ -28,9 +28,54 @@
             <a href="#">Customers</a>
         </div>
     </div>
-
+    <!--Header-->
+    <div class="header-section">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus eum esse nesciunt quo, veritatis in iste nostrum? Quo at eaque maxime dolorum possimus id debitis quia a consequatur autem. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Officiis ad, quia commodi animi accusantium ratione illo aliquam ullam, sit cumque at libero doloremque expedita, ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat est quas eligendi
+        explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum officiis deserunt laborum placeat culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi consectetur ullam maiores deserunt
+        iste dicta iusto? Obcaecati molestias vel, blanditiis mollitia corrupti voluptate debitis vero porro alias? Vel, odit nam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus eum esse nesciunt quo, veritatis in iste nostrum?
+        Quo at eaque maxime dolorum possimus id debitis quia a consequatur autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ad, quia commodi animi accusantium ratione illo aliquam ullam, sit cumque at libero doloremque expedita,
+        ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat est quas eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum officiis
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus eum esse nesciunt quo, veritatis in iste nostrum? Quo at eaque maxime dolorum possimus id debitis quia a consequatur autem. Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Officiis ad, quia commodi animi accusantium ratione illo aliquam ullam, sit cumque at libero doloremque expedita, ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat est quas
+        eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum officiis deserunt laborum placeat culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi consectetur ullam maiores
+        deserunt iste dicta iusto? Obcaecati molestias vel, blanditiis mollitia corrupti voluptate debitis vero porro alias? Vel, odit nam? ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat
+        est quas eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum officiis Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus eum esse nesciunt quo, veritatis in iste
+        nostrum? Quo at eaque maxime dolorum possimus id debitis quia a consequatur autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ad, quia commodi animi accusantium ratione illo aliquam ullam, sit cumque at libero doloremque
+        expedita, ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat est quas eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum
+        officiis deserunt laborum placeat culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi consectetur ullam maiores deserunt iste dicta iusto? Obcaecati molestias vel, blanditiis mollitia corrupti voluptate debitis vero porro alias?
+        Vel, odit nam? ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat est quas eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate!
+        Ipsum officiis Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus eum esse nesciunt quo, veritatis in iste nostrum? Quo at eaque maxime dolorum possimus id debitis quia a consequatur autem. Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Officiis ad, quia commodi animi accusantium ratione illo aliquam ullam, sit cumque at libero doloremque expedita, ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat
+        est quas eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum officiis deserunt laborum placeat culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi consectetur ullam
+        maiores deserunt iste dicta iusto? Obcaecati molestias vel, blanditiis mollitia corrupti voluptate debitis vero porro alias? Vel, odit nam? ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Placeat est quas eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum officiis Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus eum esse nesciunt quo, veritatis
+        in iste nostrum? Quo at eaque maxime dolorum possimus id debitis quia a consequatur autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ad, quia commodi animi accusantium ratione illo aliquam ullam, sit cumque at libero doloremque
+        expedita, ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat est quas eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum
+        officiis deserunt laborum placeat culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi consectetur ullam maiores deserunt iste dicta iusto? Obcaecati molestias vel, blanditiis mollitia corrupti voluptate debitis vero porro alias?
+        Vel, odit nam?
+    </div>
     <!--Footer-->
-    <footer></footer>
+    <footer class="footer-section">
+        <div class="footer-area">
+            <div class="footer-text">
+                <p>
+                    furniture &copy; 2023, Furniture Home
+                    <a href="#">Nice Home</a>
+                </p>
+            </div>
+            <div class="footer-menu">
+                <ul>
+                    <li><a href="#">Table</a></li>
+                    <li><a href="#">Kitchen</a></li>
+                    <li><a href="#">Chair</a></li>
+                    <li><a href="#">Arm chair</a></li>
+                    <li><a href="#">desks</a></li>
+                </ul>
+
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
