Adding Header section

--- a/index.html
+++ b/index.html
@@ -29,32 +29,21 @@
         </div>
     </div>
     <!--Header-->
-    <div class="header-section">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus eum esse nesciunt quo, veritatis in iste nostrum? Quo at eaque maxime dolorum possimus id debitis quia a consequatur autem. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Officiis ad, quia commodi animi accusantium ratione illo aliquam ullam, sit cumque at libero doloremque expedita, ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat est quas eligendi
-        explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum officiis deserunt laborum placeat culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi consectetur ullam maiores deserunt
-        iste dicta iusto? Obcaecati molestias vel, blanditiis mollitia corrupti voluptate debitis vero porro alias? Vel, odit nam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus eum esse nesciunt quo, veritatis in iste nostrum?
-        Quo at eaque maxime dolorum possimus id debitis quia a consequatur autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ad, quia commodi animi accusantium ratione illo aliquam ullam, sit cumque at libero doloremque expedita,
-        ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat est quas eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum officiis
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus eum esse nesciunt quo, veritatis in iste nostrum? Quo at eaque maxime dolorum possimus id debitis quia a consequatur autem. Lorem ipsum dolor sit amet consectetur adipisicing
-        elit. Officiis ad, quia commodi animi accusantium ratione illo aliquam ullam, sit cumque at libero doloremque expedita, ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat est quas
-        eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum officiis deserunt laborum placeat culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi consectetur ullam maiores
-        deserunt iste dicta iusto? Obcaecati molestias vel, blanditiis mollitia corrupti voluptate debitis vero porro alias? Vel, odit nam? ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat
-        est quas eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum officiis Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus eum esse nesciunt quo, veritatis in iste
-        nostrum? Quo at eaque maxime dolorum possimus id debitis quia a consequatur autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ad, quia commodi animi accusantium ratione illo aliquam ullam, sit cumque at libero doloremque
-        expedita, ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat est quas eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum
-        officiis deserunt laborum placeat culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi consectetur ullam maiores deserunt iste dicta iusto? Obcaecati molestias vel, blanditiis mollitia corrupti voluptate debitis vero porro alias?
-        Vel, odit nam? ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat est quas eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate!
-        Ipsum officiis Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus eum esse nesciunt quo, veritatis in iste nostrum? Quo at eaque maxime dolorum possimus id debitis quia a consequatur autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Officiis ad, quia commodi animi accusantium ratione illo aliquam ullam, sit cumque at libero doloremque expedita, ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat
-        est quas eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum officiis deserunt laborum placeat culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi consectetur ullam
-        maiores deserunt iste dicta iusto? Obcaecati molestias vel, blanditiis mollitia corrupti voluptate debitis vero porro alias? Vel, odit nam? ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-        Placeat est quas eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum officiis Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus eum esse nesciunt quo, veritatis
-        in iste nostrum? Quo at eaque maxime dolorum possimus id debitis quia a consequatur autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ad, quia commodi animi accusantium ratione illo aliquam ullam, sit cumque at libero doloremque
-        expedita, ipsum dignissimos! Odit incidunt tenetur rerum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat est quas eligendi explicabo aut fugiat voluptatum, atque hic eum magnam! Ratione doloremque consequuntur cupiditate! Ipsum
-        officiis deserunt laborum placeat culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi consectetur ullam maiores deserunt iste dicta iusto? Obcaecati molestias vel, blanditiis mollitia corrupti voluptate debitis vero porro alias?
-        Vel, odit nam?
+    <div class="container-about">
+        <div class="hero-image">
+            <div class="hero-text">
+                <h1 style="font-size: 50px">Find your desire Furniture</h1>
+                <button>Buy Furniture</button>
+            </div>
+        </div>
+        <h2 class="about-text1">You can read more a bout me</h2>
+        <p class="about-text2">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo blanditiis provident est quidem qui vitae tempora nesciunt fugiat, aliquam dolore voluptatem! Tenetur enim officiis, sint possimus modi velit laboriosam necessitatibus! Lorem ipsum dolor sit
+            amet consectetur adipisicing elit. Repellat facilis fugiat cupiditate eveniet perferendis libero minus pariatur debitis illum. Odit perspiciatis eum non assumenda officia recusandae repellat vel earum laborum. Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit. Nulla ad atque ipsam nisi a voluptate excepturi! Aspernatur quod facere officiis laborum? Possimus sint dicta dolores perspiciatis, sequi minus asperiores? Quis.
+        </p>
     </div>
+
     <!--Footer-->
     <footer class="footer-section">
         <div class="footer-area">
@@ -72,7 +61,6 @@
                     <li><a href="#">Arm chair</a></li>
                     <li><a href="#">desks</a></li>
                 </ul>
-
             </div>
         </div>
     </footer>
