Adding About  section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <a href="#">Customers</a>
         </div>
     </div>
-    <!--Header-->
+
+    <!--Header Section-->
     <div class="container-about">
         <div class="hero-image">
             <div class="hero-text">
@@ -36,15 +37,54 @@
                 <button>Buy Furniture</button>
             </div>
         </div>
-        <h2 class="about-text1">You can read more a bout me</h2>
-        <p class="about-text2">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo blanditiis provident est quidem qui vitae tempora nesciunt fugiat, aliquam dolore voluptatem! Tenetur enim officiis, sint possimus modi velit laboriosam necessitatibus! Lorem ipsum dolor sit
-            amet consectetur adipisicing elit. Repellat facilis fugiat cupiditate eveniet perferendis libero minus pariatur debitis illum. Odit perspiciatis eum non assumenda officia recusandae repellat vel earum laborum. Lorem, ipsum dolor sit amet consectetur
-            adipisicing elit. Nulla ad atque ipsam nisi a voluptate excepturi! Aspernatur quod facere officiis laborum? Possimus sint dicta dolores perspiciatis, sequi minus asperiores? Quis.
+    </div>
+
+    <!--About Section-->
+    <div class="about-section">
+        <div class="about-text">
+            <h1>We Are The Best Interior Designing Firm In Your City</h1>
+            <p>
+                Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolorInvidunt lorem justo sanctus clita. Erat lorem labore ea,
+                justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor
+            </p>
+            <div class="icon-about">
+                <div class="icon1">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#565250" class="w-2 h-2">
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M12 21v-8.25M15.75 21v-8.25M8.25 21v-8.25M3 9l9-6 9 6m-1.5 12V10.332A48.36 48.36 0 0012 9.75c-2.551 0-5.056.2-7.5.582V21M3 21h18M12 6.75h.008v.008H12V6.75z"
+              />
+            </svg>
+                    <p>Project Planning</p>
+                </div>
+                <div class="icon2">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#565250" class="w-6 h-6">
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9 17.25v1.007a3 3 0 01-.879 2.122L7.5 21h9l-.621-.621A3 3 0 0115 18.257V17.25m6-12V15a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 15V5.25m18 0A2.25 2.25 0 0018.75 3H5.25A2.25 2.25 0 003 5.25m18 0V12a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 12V5.25"
+              />
+            </svg>
+                    <p>Commercial Design</p>
+                </div>
+            </div>
+        </div>
+        <div class="about-right">
+            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+            <lottie-player src="https://lottie.host/c87ab966-9dcb-4a10-971a-fd9a219f6e3b/JOB5KLrJx8.json" background="transparent" speed="1" style="width: 300px; height: 200px" loop autoplay></lottie-player>
+            <h1>25+</h1>
+            <h3>Years Experience</h3>
+        </div>
+    </div>
+
+    <div class="test">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, illo dolorum delectus quo animi, quae, aut repudiandae libero voluptatem commodi saepe a expedita facilis totam sapiente odio incidunt? Ad, vel!
         </p>
     </div>
 
-    <!--Footer-->
+    <!--Footer Section-->
     <footer class="footer-section">
         <div class="footer-area">
             <div class="footer-text">
