Adding media query for about section

--- a/index.html
+++ b/index.html
@@ -71,12 +71,32 @@
             </div>
         </div>
         <div class="about-right">
-            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-            <lottie-player src="https://lottie.host/c87ab966-9dcb-4a10-971a-fd9a219f6e3b/JOB5KLrJx8.json" background="transparent" speed="1" style="width: 300px; height: 200px" loop autoplay></lottie-player>
+            <div>
+                <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+                <lottie-player src="https://lottie.host/c87ab966-9dcb-4a10-971a-fd9a219f6e3b/JOB5KLrJx8.json" background="transparent" speed="1" style="width: 300px; height: 200px" loop autoplay></lottie-player>
+            </div>
             <h1>25+</h1>
             <h3>Years Experience</h3>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <div class="test">
         <p>
