Adding product section

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
         <div class="nav-links">
             <a href="#" class="active">Home</a>
-            <a href="#">Product</a>
-            <a href="#">Customers</a>
+            <a href="#about">About</a>
+            <a href="#product">Product</a>
         </div>
     </div>
 
@@ -40,7 +40,7 @@
     </div>
 
     <!--About Section-->
-    <div class="about-section">
+    <div class="about-section" id="about">
         <div class="about-text">
             <h1>We Are The Best Interior Designing Firm In Your City</h1>
             <p>
@@ -80,28 +80,54 @@
         </div>
     </div>
 
+    <!--Product Section-->
+
+    <div class="Product-title">
+        <h1>Latest Product</h1>
+        <p>You can find any type that you want , because we are here for helping you living room ,bed , table , chair </p>
+    </div>
+
+    <div class="product-section" id="product">
+        <div class="card">
+            <img src="/img/header1.jpg" alt="Jane" style="width: 100%" />
+            <div class="container">
+                <h2>Dining room</h2>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi quos cumque amet eius tempore fuga velit consectetur deleniti, at voluptates atque eaque delectus id aliquid optio ex natus rerum quidem?
+                </p>
+                <button class="button">Buy</button>
+            </div>
+        </div>
+        <div class="card">
+            <img src="/img/header4.jpg" alt="Jane" style="width: 100%" />
+            <div class="container">
+                <h2>Arm Chair</h2>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi quos cumque amet eius tempore fuga velit consectetur deleniti, at voluptates atque eaque delectus id aliquid optio ex natus rerum quidem?
+                </p>
+
+                <button class="button">Buy</button>
+            </div>
+        </div>
+        <div class="card">
+            <img src="/img/header5.jpg" alt="Jane" style="width: 100%" />
+            <div class="container">
+                <h2>Living Room</h2>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi quos cumque amet eius tempore fuga velit consectetur deleniti, at voluptates atque eaque delectus id aliquid optio ex natus rerum quidem?
+                </p>
+                <button class="button">Buy</button>
+            </div>
+        </div>
+    </div>
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <!--space-->
     <div class="test">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, illo dolorum delectus quo animi, quae, aut repudiandae libero voluptatem commodi saepe a expedita facilis totam sapiente odio incidunt? Ad, vel!
-        </p>
+
     </div>
 
     <!--Footer Section-->
