using Array object for rendering the data of our products (img,title,description)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="scripts.js" defer></script>
 </head>
 
 <body>
@@ -87,39 +88,7 @@
         <p>You can find any type that you want , because we are here for helping you living room ,bed , table , chair </p>
     </div>
 
-    <div class="product-section" id="product">
-        <div class="card">
-            <img src="/img/header1.jpg" alt="Jane" style="width: 100%" />
-            <div class="container">
-                <h2>Dining room</h2>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi quos cumque amet eius tempore fuga velit consectetur deleniti, at voluptates atque eaque delectus id aliquid optio ex natus rerum quidem?
-                </p>
-                <button class="button">Buy</button>
-            </div>
-        </div>
-        <div class="card">
-            <img src="/img/header4.jpg" alt="Jane" style="width: 100%" />
-            <div class="container">
-                <h2>Arm Chair</h2>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi quos cumque amet eius tempore fuga velit consectetur deleniti, at voluptates atque eaque delectus id aliquid optio ex natus rerum quidem?
-                </p>
-
-                <button class="button">Buy</button>
-            </div>
-        </div>
-        <div class="card">
-            <img src="/img/header5.jpg" alt="Jane" style="width: 100%" />
-            <div class="container">
-                <h2>Living Room</h2>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi quos cumque amet eius tempore fuga velit consectetur deleniti, at voluptates atque eaque delectus id aliquid optio ex natus rerum quidem?
-                </p>
-                <button class="button">Buy</button>
-            </div>
-        </div>
-    </div>
+    <div class="all-cards" id="product"></div>
 
 
 
